Module construction - ready to start integration with API

--- a/.gitignore
+++ b/.gitignore
@@ -534,3 +534,9 @@ portalPacjenta/pageObjects/__pycache__/loginPage.cpython-36.pyc
 portalPacjenta/pageObjects/__pycache__/mainPage.cpython-36.pyc
 __pycache__/portalPacjenta_results.cpython-36.pyc
 __pycache__/portalPacjenta_searchPage.cpython-36.pyc
+portalPacjenta/__pycache__/__init__.cpython-36.pyc
+portalPacjenta/__pycache__/__init__.cpython-36.pyc
+portalPacjenta/pageObjects/__pycache__/searchPage.cpython-36.pyc
+portalPacjenta/chromeObjects/__pycache__/existingChrome.cpython-36.pyc
+portalPacjenta/chromeObjects/__pycache__/existingChrome.cpython-36.pyc
+portalPacjenta/__pycache__/__init__.cpython-36.pyc
