--- a/old/config.json
+++ b/old/config.json
@@ -16,8 +16,8 @@
                         "end": "22:00"
                     }
                 ],
-                "afterDate": "2020-09-15",
-                "bookedDateTime": ""
+                "afterDate": "2020-10-12",
+                "bookedDateTime": "2020-10-22T16:50:00.000"
             }
         }
     ],
