--- a/portalPacjenta/configObjects/config.json
+++ b/portalPacjenta/configObjects/config.json
@@ -16,8 +16,8 @@
                         "end": "22:00"
                     }
                 ],
-                "notBefore": "2020-09-13",
-                "bookedDateTime": "2020-09-14T17:20:00.000"
+                "afterDate": "2020-10-20",
+                "bookedDateTime": "2020-10-22T16:20:00.000"
             }
         }
     ],
